# fatcat

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  .reading.txt.swp  .travis.yml  .travis.yml.disabled  CHANGELOG.md  CONDUCT.md  CONTRIBUTORS.md  Dockerfile.fatcat-pytest  LICENSE  LICENSE.md  Pipfile  README.md  TODO  TODO.md  aliases.js  config.py  fatcat-openapi2.yml  fatcat-rfc.md  fatcat_client.py  index.html  next_thoughts.txt  plan.txt  rfc.md  run.py  search-index.js
backend/: backend.py  config.py
extra/: bootstrap_bots.sh  collectd_statsd.conf  nginx_fatcat-api  nginx_fatcat-web  quick_dump.sql  release_process.md  update_gh-pages.sh
fatcat/: ConnectionPool.t.html  XClacksOverhead.t.html  XClacksOverheadMiddleware.t.html  __init__.py  all.html  api.py  api_client.py  dummy.py  enum.ErrorKind.html  establish_connection.v.html  fn.establish_connection.html  fn.server.html  index.html  (+14 more)
fatcat-go/: README.md  fatcat-openapi2.yml  fatcat-schema.sql
rust/: .env  .gitignore  Cargo.toml  HACKING.md  INSTALL.md  Makefile  NOTES.txt  README.cockroach.md  README.export.md  README.md  TODO  build_tarball.sh  codegen_openapi2.sh  env.example  example.env  fatcat-openapi2.yml
rust/.cargo/: config
rust/fatcat-api/: Cargo.toml  README.md  api.yaml
rust/fatcat-api-spec/: Cargo.toml  README.md  api.yaml  rustfmt.toml
rust/fatcat-api-spec/api/: swagger.yaml
rust/fatcat-api-spec/examples/: client.rs  server.rs
rust/fatcat-api-spec/examples/server_lib/: server.rs
rust/fatcat-api-spec/src/: client.rs  lib.rs  mimetypes.rs  models.rs  server.rs
rust/fatcat-api/api/: swagger.yaml
rust/fatcat-api/examples/: client.rs  server.rs
rust/fatcat-api/examples/server_lib/: mod.rs  server.rs
rust/fatcat-api/src/: client.rs  lib.rs  mimetypes.rs  models.rs  server.rs
rust/fatcat-api/src/client/: mod.rs
rust/fatcat-api/src/server/: auth.rs  mod.rs
rust/fatcat-openapi/: Cargo.toml  README.md  api.yaml
rust/fatcat-openapi/api/: swagger.yaml
rust/fatcat-openapi/docs/: AuthOidc.md  AuthOidcResult.md  AuthTokenResult.md  ChangelogEntry.md  ContainerAutoBatch.md  ContainerEntity.md  CreatorAutoBatch.md  CreatorEntity.md  Editgroup.md  EditgroupAnnotation.md  EditgroupEdits.md  Editor.md  EntityEdit.md  EntityHistoryEntry.md  ErrorResponse.md  FileAutoBatch.md  FileEntity.md  FileUrl.md  FilesetAutoBatch.md  FilesetEntity.md  FilesetFile.md  FilesetUrl.md  ReleaseAbstract.md  ReleaseAutoBatch.md  ReleaseContrib.md  ReleaseEntity.md  ReleaseExtIds.md  ReleaseRef.md  Success.md  WebcaptureAutoBatch.md  WebcaptureCdxLine.md  WebcaptureEntity.md  WebcaptureUrl.md  WorkAutoBatch.md  WorkEntity.md  default_api.md
rust/fatcat-openapi/examples/: client.rs  server.rs
rust/fatcat-openapi/examples/client/: main.rs
rust/fatcat-openapi/examples/server/: main.rs  server.rs
rust/fatcat-openapi/examples/server_lib/: mod.rs  server.rs
rust/fatcat-openapi/src/: client.rs  context.rs  lib.rs  mimetypes.rs  models.rs  server.rs
rust/fatcat-openapi/src/client/: mod.rs
rust/fatcat-openapi/src/server/: mod.rs
rust/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
rust/migrations/2018-05-12-001226_init/: down.sql  up.sql
rust/migrations/2018-05-16-033858_dummy_data/: up.sql
rust/migrations/2019-01-01-000000_init/: down.sql  up.sql
rust/migrations/2019-05-09-051834_v0.3/: down.sql  up.sql
rust/migrations/2021-10-12-215817_v0.4/: down.sql  up.sql
rust/migrations/2021-11-17-222046_content_scope/: down.sql  up.sql
rust/redoc/: index.html
rust/src/: api_entity_crud.rs  api_helpers.rs  api_lib.rs  api_server.rs  api_wrappers.rs  auth.rs  database_entity_crud.rs  database_models.rs  database_schema.rs  editing.rs  editing_crud.rs  endpoint_handlers.rs  endpoints.rs  entity_crud.rs  errors.rs  identifiers.rs  lib.rs  server.rs
rust/swagger-ui/: index.html
rust/tests/: api_server.rs  helpers.rs  pg_tmp.sh  test_api_server.rs  test_api_server_client.rs  test_api_server_http.rs  test_auth.rs  test_extid.rs  test_fcid.rs  test_old_python_tests.rs  test_refs.rs
(+2017 files in other folders)
