[package]
name = "fatcat"
version = "0.1.0"
authors = ["Bryan Newbold <bnewbold@archive.org>"]
description = "A scalable, versioned, API-oriented catalog of bibliographic entities and file metadata"
license = "AGPL 3.0"

[workspace]
members = ["fatcat-api-spec"]

[dependencies]
fatcat-api-spec = {version = "*", path = "fatcat-api-spec"}
diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
diesel_migrations = "1.3"
dotenv = "0.9.0"
clap = "2"
error-chain = "0.12"
uuid = "0.5"
log = "*"
data-encoding = "2.1"
regex = "1"
lazy_static = "1.0"
sha1 = { version = "0.6", features = ["std"] }

# API server
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = "0.10"
iron = "0.6"
iron-slog = "0.0.2"
iron-test = "*"
swagger = "0.7"
slog = "^2.0"
slog-term = "*"
slog-async = "*"
serde_json = "1.0"

# Command-line tools
crossbeam-channel = "0.2"
num_cpus = "1"

# Unused (hyper 0.11 and https)
#hyper-openssl = {version = "0.2", optional = true}
#hyper-tls = {version = "0.1.2", optional = true}
#tokio-core = "0.1.6"
#tokio-proto = "0.1.1"

# TODO
#sentry = "*"
#cadence = "*"
#frank_jwt = "*"
