[package]
name = "fatcat"
version = "0.1.0"
edition = "2018"
authors = ["Bryan Newbold <bnewbold@archive.org>"]
description = "A scalable, versioned, API-oriented catalog of bibliographic entities and file metadata"
license = "AGPL 3.0"

[workspace]
members = ["fatcat-api-spec"]

[dependencies]
fatcat-api-spec = {version = "*", path = "fatcat-api-spec"}
diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
diesel_migrations = "1.3"
dotenv = "0.9.0"
clap = "2"
uuid = "0.6"
log = "*"
data-encoding = "2.1"
regex = "1"
lazy_static = "1.0"
sha1 = { version = "0.6", features = ["std"] }
macaroon = { git = "https://github.com/bnewbold/libmacaroon-rs", branch = "bnewbold-broken" }
rand = "*"
failure = "*"

# API server
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = "0.10"
iron = "0.6"
iron-slog = "0.0.2"
iron-test = "*"
swagger = "0.7"
slog = "^2.0"
slog-term = "*"
slog-async = "*"
serde_json = "1.0"
sentry = { version = "^0.12", default-features = false, features = ["with_client_implementation", "with_backtrace", "with_panic", "with_log", "with_rust_info", "with_failure"] }
cadence = "^0.16"

# Command-line tools
crossbeam-channel = "0.2"
num_cpus = "1"
env_logger = "*"
