[package]
name = "fatcat"
version = "0.5.0"
edition = "2018"
authors = ["Bryan Newbold <bnewbold@archive.org>"]
description = "A scalable, versioned, API-oriented catalog for bibliographic entities and file metadata"
homepage = "https://fatcat.wiki"
repository = "https://github.com/internetarchive/fatcat"
license = "AGPL-3.0-or-later"

[workspace]
members = ["fatcat-openapi"]

[dependencies]
fatcat-openapi = {version = "*", path = "fatcat-openapi", features = ["server"] }
diesel = { version = "1.3", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
diesel_migrations = "1.3"
dotenv = "0.9.0"
clap = "2"
uuid = "0.6"
log = { version = "*", features = ["max_level_info", "release_max_level_info"] }
data-encoding = "2.1"
regex = "1"
lazy_static = "1"
sha1 = { version = "0.6", features = ["std"] }
macaroon = "0.3.0"
rand = "*"
failure = "*"

# API server
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = "0.10"
iron = "0.6"
iron-slog = "0.0.2"
iron-test = "*"
swagger = "0.7"
slog = "^2.0"
slog-term = "*"
slog-async = "*"
slog-stdlog = "*"
slog-scope = "*"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.0.4"
sentry = { version = "0.15", default-features = false, features = ["with_client_implementation", "with_backtrace", "with_panic", "with_log", "with_rust_info", "with_failure", "with_default_transport" ] }
cadence = "^0.16"

# Command-line tools
crossbeam-channel = "0.5"
num_cpus = "1"
env_logger = "0.8"
